# fader-tester

./: .gitignore  Cargo.toml  README.md
src/: goxlr.rs  main.rs  preflight.rs
