[package]
name = "fader-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxlr-usb = { git="https://github.com/goxlr-on-linux/goxlr-utility" }
goxlr-types = { git="https://github.com/goxlr-on-linux/goxlr-utility" }

enum-map = "2.7.3"
strum = { version = "0.25.0", features = ["derive"] }

tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.82"

lazy_static = "1.4.0"

colored = "2.1.0"

# Used for Preflight tests..
sysinfo = "0.30.5"